added animation to nav links

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <header>
       <img src="img/technex.png" alt="" class="img-title" />
       <nav class="navigation">
-        <li class="nav-link">Events</li>
-        <li class="nav-link">Workshops</li>
-        <li class="nav-link">Gallery</li>
-        <li class="nav-link">Sponsor</li>
-        <li class="nav-link">Merchandise</li>
+        <li class="nav-link bottom">Events</li>
+        <li class="nav-link bottom">Workshops</li>
+        <li class="nav-link bottom">Gallery</li>
+        <li class="nav-link bottom">Sponsor</li>
+        <li class="nav-link bottom">Merchandise</li>
         <li class="nav-link ca">Become our CA</li>
         <li class="nav-link login">Log-in</li>
       </nav>
